--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-# desktop
+= desktop
 Pop OS
 
 app image is best if you want a stable specific version of an app
@@ -6,3 +6,5 @@ app image is best if you want a stable specific version of an app
 snaps are best for proprietary software
 
 flatpak for everything else
+
+//systemctl --user enable --now emacs
